--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@vicons/ionicons5": "^0.13.0",
         "@vueuse/core": "^13.3.0",
         "alova": "^3.3.0",
+        "better-sqlite3": "^11.10.0",
         "crossws": "0.4.1",
         "dotenv": "^16.5.0",
         "drizzle-orm": "^0.44.2",
